src/grammar/IdlParser.ts
// Generated from ./grammar/IdlParser.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import IdlParserListener from "./IdlParserListener.js";
import IdlParserVisitor from "./IdlParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class IdlParser extends Parser {
	public static readonly DOC_BEGIN = 1;
	public static readonly DOC_END = 2;
	public static readonly DOC_TEXT = 3;
	public static readonly COMMERCIAL_TAG = 4;
	public static readonly INTERNAL_TAG = 5;
	public static readonly DEPRECATED_TAG = 6;
	public static readonly UNDOCUMENTED_TAG = 7;
	public static readonly LINK_TAG_BEGIN = 8;
	public static readonly LINK_TAG_END = 9;
	public static readonly PARAM_TAG = 10;
	public static readonly RETURN_TAG = 11;
	public static readonly LBRACE = 12;
	public static readonly RBRACE = 13;
	public static readonly LPAREN = 14;
	public static readonly RPAREN = 15;
	public static readonly COMMA = 16;
	public static readonly DOT = 17;
	public static readonly COLON = 18;
	public static readonly SEMICOLON = 19;
	public static readonly LANGLE = 20;
	public static readonly RANGLE = 21;
	public static readonly NUM = 22;
	public static readonly CPP = 23;
	public static readonly JAVA = 24;
	public static readonly KMP = 25;
	public static readonly OBJC = 26;
	public static readonly SWIFT = 27;
	public static readonly DART = 28;
	public static readonly PROTOCONV = 29;
	public static readonly TYPE_PREFIX = 30;
	public static readonly IMPORT = 31;
	public static readonly CONST = 32;
	public static readonly OPTIONAL = 33;
	public static readonly BG_THREAD = 34;
	public static readonly ANY_THREAD = 35;
	public static readonly BASED_ON = 36;
	public static readonly SERIALIZABLE = 37;
	public static readonly ENUM = 38;
	public static readonly BITFIELD = 39;
	public static readonly VARIANT = 40;
	public static readonly STRUCT = 41;
	public static readonly LITE = 42;
	public static readonly OPTIONS = 43;
	public static readonly ABSTRACT = 44;
	public static readonly INTERFACE = 45;
	public static readonly VIRTUAL = 46;
	public static readonly VIEW_DELEGATE = 47;
	public static readonly WEAK_REF = 48;
	public static readonly SHARED_REF = 49;
	public static readonly GEN = 50;
	public static readonly READONLY = 51;
	public static readonly NATIVE = 52;
	public static readonly STATIC = 53;
	public static readonly LISTENER = 54;
	public static readonly LAMBDA = 55;
	public static readonly STRONG_REF = 56;
	public static readonly PLATFORM = 57;
	public static readonly ASSIGN = 58;
	public static readonly LSHIFT = 59;
	public static readonly BINOR = 60;
	public static readonly INT_LITERAL = 61;
	public static readonly FLOAT_LITERAL = 62;
	public static readonly DOUBLE_LITERAL = 63;
	public static readonly STR_LITERAL = 64;
	public static readonly BOOL_LITERAL = 65;
	public static readonly NEWLINE = 66;
	public static readonly SPACE = 67;
	public static readonly IDENTIFIER = 68;
	public static readonly LINK_SPACE = 69;
	public static readonly SINGLE_COMMERCIAL = 70;
	public static readonly SINGLE_INTERNAL = 71;
	public static readonly SINGLE_DEPRECATED = 72;
	public static readonly SINGLE_UNDOCUMENTED = 73;
	public static readonly SINGLE_RETURN = 74;
	public static readonly MULTI_END_COMMENT = 75;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_programm = 0;
	public static readonly RULE_topDecl = 1;
	public static readonly RULE_importExpr = 2;
	public static readonly RULE_typePrefix = 3;
	public static readonly RULE_documentation = 4;
	public static readonly RULE_documentationBlock = 5;
	public static readonly RULE_documentationTag = 6;
	public static readonly RULE_documentationLink = 7;
	public static readonly RULE_documentationParam = 8;
	public static readonly RULE_documentationReturn = 9;
	public static readonly RULE_parametersRef = 10;
	public static readonly RULE_interfaceDecl = 11;
	public static readonly RULE_interfaceOwnership = 12;
	public static readonly RULE_enumDecl = 13;
	public static readonly RULE_enumFieldsDecl = 14;
	public static readonly RULE_enumField = 15;
	public static readonly RULE_variantDecl = 16;
	public static readonly RULE_structDecl = 17;
	public static readonly RULE_structKind = 18;
	public static readonly RULE_listenerDecl = 19;
	public static readonly RULE_functionDecl = 20;
	public static readonly RULE_parametersDecl = 21;
	public static readonly RULE_parameter = 22;
	public static readonly RULE_propertyDecl = 23;
	public static readonly RULE_structFieldDecl = 24;
	public static readonly RULE_typeRef = 25;
	public static readonly RULE_customizableNameDecl = 26;
	public static readonly RULE_basedProtoTop = 27;
	public static readonly RULE_basedProtoInternal = 28;
	public static readonly RULE_sourceDecl = 29;
	public static readonly RULE_expr = 30;
	public static readonly literalNames: (string | null)[] = [ null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            "':'", "';'", 
                                                            "'<'", "'>'", 
                                                            null, "'cpp'", 
                                                            "'java'", "'kmp'", 
                                                            "'objc'", "'swift'", 
                                                            "'dart'", "'protoconv'", 
                                                            "'type_prefix'", 
                                                            "'import'", 
                                                            null, null, 
                                                            "'bg_thread'", 
                                                            "'any_thread'", 
                                                            "'based on'", 
                                                            "'serializable'", 
                                                            "'enum'", "'bitfield'", 
                                                            "'variant'", 
                                                            "'struct'", 
                                                            "'lite'", "'options'", 
                                                            "'abstract'", 
                                                            "'interface'", 
                                                            "'virtual'", 
                                                            "'view_delegate'", 
                                                            "'weak_ref'", 
                                                            "'shared_ref'", 
                                                            "'gen'", "'readonly'", 
                                                            "'native'", 
                                                            "'static'", 
                                                            "'listener'", 
                                                            "'lambda'", 
                                                            "'strong_ref'", 
                                                            "'platform'", 
                                                            "'='", "'<<'", 
                                                            "'|'", null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            null, "'*/'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "DOC_BEGIN", 
                                                             "DOC_END", 
                                                             "DOC_TEXT", 
                                                             "COMMERCIAL_TAG", 
                                                             "INTERNAL_TAG", 
                                                             "DEPRECATED_TAG", 
                                                             "UNDOCUMENTED_TAG", 
                                                             "LINK_TAG_BEGIN", 
                                                             "LINK_TAG_END", 
                                                             "PARAM_TAG", 
                                                             "RETURN_TAG", 
                                                             "LBRACE", "RBRACE", 
                                                             "LPAREN", "RPAREN", 
                                                             "COMMA", "DOT", 
                                                             "COLON", "SEMICOLON", 
                                                             "LANGLE", "RANGLE", 
                                                             "NUM", "CPP", 
                                                             "JAVA", "KMP", 
                                                             "OBJC", "SWIFT", 
                                                             "DART", "PROTOCONV", 
                                                             "TYPE_PREFIX", 
                                                             "IMPORT", "CONST", 
                                                             "OPTIONAL", 
                                                             "BG_THREAD", 
                                                             "ANY_THREAD", 
                                                             "BASED_ON", 
                                                             "SERIALIZABLE", 
                                                             "ENUM", "BITFIELD", 
                                                             "VARIANT", 
                                                             "STRUCT", "LITE", 
                                                             "OPTIONS", 
                                                             "ABSTRACT", 
                                                             "INTERFACE", 
                                                             "VIRTUAL", 
                                                             "VIEW_DELEGATE", 
                                                             "WEAK_REF", 
                                                             "SHARED_REF", 
                                                             "GEN", "READONLY", 
                                                             "NATIVE", "STATIC", 
                                                             "LISTENER", 
                                                             "LAMBDA", "STRONG_REF", 
                                                             "PLATFORM", 
                                                             "ASSIGN", "LSHIFT", 
                                                             "BINOR", "INT_LITERAL", 
                                                             "FLOAT_LITERAL", 
                                                             "DOUBLE_LITERAL", 
                                                             "STR_LITERAL", 
                                                             "BOOL_LITERAL", 
                                                             "NEWLINE", 
                                                             "SPACE", "IDENTIFIER", 
                                                             "LINK_SPACE", 
                                                             "SINGLE_COMMERCIAL", 
                                                             "SINGLE_INTERNAL", 
                                                             "SINGLE_DEPRECATED", 
                                                             "SINGLE_UNDOCUMENTED", 
                                                             "SINGLE_RETURN", 
                                                             "MULTI_END_COMMENT" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"programm", "topDecl", "importExpr", "typePrefix", "documentation", "documentationBlock", 
		"documentationTag", "documentationLink", "documentationParam", "documentationReturn", 
		"parametersRef", "interfaceDecl", "interfaceOwnership", "enumDecl", "enumFieldsDecl", 
		"enumField", "variantDecl", "structDecl", "structKind", "listenerDecl", 
		"functionDecl", "parametersDecl", "parameter", "propertyDecl", "structFieldDecl", 
		"typeRef", "customizableNameDecl", "basedProtoTop", "basedProtoInternal", 
		"sourceDecl", "expr",
	];
	public get grammarFileName(): string { return "IdlParser.g4"; }
	public get literalNames(): (string | null)[] { return IdlParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return IdlParser.symbolicNames; }
	public get ruleNames(): string[] { return IdlParser.ruleNames; }
	public get serializedATN(): number[] { return IdlParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, IdlParser._ATN, IdlParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public programm(): ProgrammContext {
		let localctx: ProgrammContext = new ProgrammContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, IdlParser.RULE_programm);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 63;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===30) {
				{
				this.state = 62;
				this.typePrefix();
				}
			}

			this.state = 68;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===31) {
				{
				{
				this.state = 65;
				this.importExpr();
				}
				}
				this.state = 70;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 74;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===1 || _la===23 || ((((_la - 37)) & ~0x1F) === 0 && ((1 << (_la - 37)) & 2072575) !== 0)) {
				{
				{
				this.state = 71;
				this.topDecl();
				}
				}
				this.state = 76;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public topDecl(): TopDeclContext {
		let localctx: TopDeclContext = new TopDeclContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, IdlParser.RULE_topDecl);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 82;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				{
				this.state = 77;
				this.interfaceDecl();
				}
				break;
			case 2:
				{
				this.state = 78;
				this.enumDecl();
				}
				break;
			case 3:
				{
				this.state = 79;
				this.variantDecl();
				}
				break;
			case 4:
				{
				this.state = 80;
				this.structDecl();
				}
				break;
			case 5:
				{
				this.state = 81;
				this.listenerDecl();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public importExpr(): ImportExprContext {
		let localctx: ImportExprContext = new ImportExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, IdlParser.RULE_importExpr);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 84;
			this.match(IdlParser.IMPORT);
			this.state = 85;
			this.match(IdlParser.STR_LITERAL);
			this.state = 86;
			this.match(IdlParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public typePrefix(): TypePrefixContext {
		let localctx: TypePrefixContext = new TypePrefixContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, IdlParser.RULE_typePrefix);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 88;
			this.match(IdlParser.TYPE_PREFIX);
			this.state = 89;
			this.match(IdlParser.IDENTIFIER);
			this.state = 90;
			this.match(IdlParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public documentation(): DocumentationContext {
		let localctx: DocumentationContext = new DocumentationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, IdlParser.RULE_documentation);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 103;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 92;
				this.match(IdlParser.DOC_BEGIN);
				this.state = 99;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 3576) !== 0)) {
					{
					this.state = 97;
					this._errHandler.sync(this);
					switch (this._input.LA(1)) {
					case 3:
					case 8:
						{
						this.state = 93;
						this.documentationBlock();
						}
						break;
					case 4:
					case 5:
					case 6:
					case 7:
						{
						this.state = 94;
						this.documentationTag();
						}
						break;
					case 10:
						{
						this.state = 95;
						this.documentationParam();
						}
						break;
					case 11:
						{
						this.state = 96;
						this.documentationReturn();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					this.state = 101;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 102;
				this.match(IdlParser.DOC_END);
				}
				}
				this.state = 105;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la===1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public documentationBlock(): DocumentationBlockContext {
		let localctx: DocumentationBlockContext = new DocumentationBlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, IdlParser.RULE_documentationBlock);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 109;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					this.state = 109;
					this._errHandler.sync(this);
					switch (this._input.LA(1)) {
					case 3:
						{
						this.state = 107;
						this.match(IdlParser.DOC_TEXT);
						}
						break;
					case 8:
						{
						this.state = 108;
						this.documentationLink();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 111;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 8, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public documentationTag(): DocumentationTagContext {
		let localctx: DocumentationTagContext = new DocumentationTagContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, IdlParser.RULE_documentationTag);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 113;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 240) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public documentationLink(): DocumentationLinkContext {
		let localctx: DocumentationLinkContext = new DocumentationLinkContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, IdlParser.RULE_documentationLink);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 115;
			this.match(IdlParser.LINK_TAG_BEGIN);
			this.state = 132;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 12, this._ctx) ) {
			case 1:
				{
				this.state = 116;
				localctx._Type = this.typeRef();
				}
				break;
			case 2:
				{
				this.state = 118;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===17 || _la===33 || _la===68) {
					{
					this.state = 117;
					localctx._Type = this.typeRef();
					}
				}

				this.state = 120;
				this.match(IdlParser.NUM);
				this.state = 121;
				localctx._Member = this.match(IdlParser.IDENTIFIER);
				this.state = 130;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===14) {
					{
					this.state = 122;
					this.match(IdlParser.LPAREN);
					this.state = 126;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (((((_la - 17)) & ~0x1F) === 0 && ((1 << (_la - 17)) & 98305) !== 0) || _la===68) {
						{
						{
						this.state = 123;
						this.parametersRef();
						}
						}
						this.state = 128;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					this.state = 129;
					this.match(IdlParser.RPAREN);
					}
				}

				}
				break;
			}
			this.state = 134;
			this.match(IdlParser.LINK_TAG_END);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public documentationParam(): DocumentationParamContext {
		let localctx: DocumentationParamContext = new DocumentationParamContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, IdlParser.RULE_documentationParam);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 136;
			this.match(IdlParser.PARAM_TAG);
			this.state = 137;
			localctx._Member = this.match(IdlParser.IDENTIFIER);
			this.state = 138;
			localctx._Desc = this.documentationBlock();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public documentationReturn(): DocumentationReturnContext {
		let localctx: DocumentationReturnContext = new DocumentationReturnContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, IdlParser.RULE_documentationReturn);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 140;
			this.match(IdlParser.RETURN_TAG);
			this.state = 141;
			localctx._Desc = this.documentationBlock();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public parametersRef(): ParametersRefContext {
		let localctx: ParametersRefContext = new ParametersRefContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, IdlParser.RULE_parametersRef);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 144;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===32) {
				{
				this.state = 143;
				this.match(IdlParser.CONST);
				}
			}

			this.state = 146;
			this.typeRef();
			this.state = 148;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 14, this._ctx) ) {
			case 1:
				{
				this.state = 147;
				this.match(IdlParser.IDENTIFIER);
				}
				break;
			}
			this.state = 160;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===16) {
				{
				{
				this.state = 150;
				this.match(IdlParser.COMMA);
				this.state = 152;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===32) {
					{
					this.state = 151;
					this.match(IdlParser.CONST);
					}
				}

				this.state = 154;
				this.typeRef();
				this.state = 156;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 16, this._ctx) ) {
				case 1:
					{
					this.state = 155;
					this.match(IdlParser.IDENTIFIER);
					}
					break;
				}
				}
				}
				this.state = 162;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public interfaceDecl(): InterfaceDeclContext {
		let localctx: InterfaceDeclContext = new InterfaceDeclContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, IdlParser.RULE_interfaceDecl);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 164;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===1) {
				{
				this.state = 163;
				this.documentation();
				}
			}

			this.state = 181;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 45:
			case 46:
			case 47:
			case 48:
			case 49:
			case 53:
				{
				this.state = 167;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===53) {
					{
					this.state = 166;
					this.match(IdlParser.STATIC);
					}
				}

				this.state = 170;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===46) {
					{
					this.state = 169;
					this.match(IdlParser.VIRTUAL);
					}
				}

				this.state = 173;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===47) {
					{
					this.state = 172;
					this.match(IdlParser.VIEW_DELEGATE);
					}
				}

				this.state = 176;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===48 || _la===49) {
					{
					this.state = 175;
					this.interfaceOwnership();
					}
				}

				this.state = 178;
				this.match(IdlParser.INTERFACE);
				}
				break;
			case 52:
				{
				this.state = 179;
				this.match(IdlParser.NATIVE);
				this.state = 180;
				this.match(IdlParser.LISTENER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 183;
			this.match(IdlParser.IDENTIFIER);
			this.state = 188;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===14) {
				{
				this.state = 184;
				this.match(IdlParser.LPAREN);
				this.state = 185;
				this.customizableNameDecl();
				this.state = 186;
				this.match(IdlParser.RPAREN);
				}
			}

			this.state = 192;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===18) {
				{
				this.state = 190;
				this.match(IdlParser.COLON);
				this.state = 191;
				localctx._Parent = this.typeRef();
				}
			}
